gen/RefundParser.java
// Generated from /Users/yatyat2/Documents/trevari/Antlr4-Refund/src/main/antlr4/Refund.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RefundParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, PLUS=7, MINUS=8, NUMBER=9, 
		WHITESPACE=10;
	public static final int
		RULE_expression = 0, RULE_refundRule = 1, RULE_beginDate = 2, RULE_beginDDay = 3, 
		RULE_endDate = 4, RULE_endDDay = 5, RULE_dDay = 6, RULE_meetingOrder = 7, 
		RULE_refundPrice = 8, RULE_sign = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"expression", "refundRule", "beginDate", "beginDDay", "endDate", "endDDay", 
			"dDay", "meetingOrder", "refundPrice", "sign"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'|'", "'begin:'", "'end:'", "'D'", "'of'", "'\uC6D0'", "'+'", 
			"'-'", null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "PLUS", "MINUS", "NUMBER", 
			"WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Refund.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RefundParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ExpressionContext extends ParserRuleContext {
		public RefundRuleContext refundRule() {
			return getRuleContext(RefundRuleContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefundVisitor ) return ((RefundVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(21);
			refundRule();
			}
			_ctx.stop = _input.LT(-1);
			setState(27);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpressionContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expression);
					setState(23);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(24);
					expression(2);
					}
					} 
				}
				setState(29);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class RefundRuleContext extends ParserRuleContext {
		public BeginDateContext beginDate() {
			return getRuleContext(BeginDateContext.class,0);
		}
		public EndDateContext endDate() {
			return getRuleContext(EndDateContext.class,0);
		}
		public RefundPriceContext refundPrice() {
			return getRuleContext(RefundPriceContext.class,0);
		}
		public RefundRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_refundRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).enterRefundRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).exitRefundRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefundVisitor ) return ((RefundVisitor<? extends T>)visitor).visitRefundRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RefundRuleContext refundRule() throws RecognitionException {
		RefundRuleContext _localctx = new RefundRuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_refundRule);
		try {
			setState(44);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				beginDate();
				setState(31);
				match(T__0);
				setState(32);
				endDate();
				setState(33);
				match(T__0);
				setState(34);
				refundPrice();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(36);
				endDate();
				setState(37);
				match(T__0);
				setState(38);
				refundPrice();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(40);
				beginDate();
				setState(41);
				match(T__0);
				setState(42);
				refundPrice();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BeginDateContext extends ParserRuleContext {
		public BeginDDayContext beginDDay() {
			return getRuleContext(BeginDDayContext.class,0);
		}
		public MeetingOrderContext meetingOrder() {
			return getRuleContext(MeetingOrderContext.class,0);
		}
		public BeginDateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beginDate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).enterBeginDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).exitBeginDate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefundVisitor ) return ((RefundVisitor<? extends T>)visitor).visitBeginDate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeginDateContext beginDate() throws RecognitionException {
		BeginDateContext _localctx = new BeginDateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_beginDate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			beginDDay();
			setState(47);
			meetingOrder();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BeginDDayContext extends ParserRuleContext {
		public DDayContext dDay() {
			return getRuleContext(DDayContext.class,0);
		}
		public BeginDDayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beginDDay; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).enterBeginDDay(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).exitBeginDDay(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefundVisitor ) return ((RefundVisitor<? extends T>)visitor).visitBeginDDay(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeginDDayContext beginDDay() throws RecognitionException {
		BeginDDayContext _localctx = new BeginDDayContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_beginDDay);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(T__1);
			setState(50);
			dDay();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndDateContext extends ParserRuleContext {
		public EndDDayContext endDDay() {
			return getRuleContext(EndDDayContext.class,0);
		}
		public MeetingOrderContext meetingOrder() {
			return getRuleContext(MeetingOrderContext.class,0);
		}
		public EndDateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endDate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).enterEndDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).exitEndDate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefundVisitor ) return ((RefundVisitor<? extends T>)visitor).visitEndDate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EndDateContext endDate() throws RecognitionException {
		EndDateContext _localctx = new EndDateContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_endDate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			endDDay();
			setState(53);
			meetingOrder();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndDDayContext extends ParserRuleContext {
		public DDayContext dDay() {
			return getRuleContext(DDayContext.class,0);
		}
		public EndDDayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endDDay; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).enterEndDDay(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).exitEndDDay(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefundVisitor ) return ((RefundVisitor<? extends T>)visitor).visitEndDDay(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EndDDayContext endDDay() throws RecognitionException {
		EndDDayContext _localctx = new EndDDayContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_endDDay);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(T__2);
			setState(56);
			dDay();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DDayContext extends ParserRuleContext {
		public SignContext sign() {
			return getRuleContext(SignContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(RefundParser.NUMBER, 0); }
		public DDayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dDay; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).enterDDay(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).exitDDay(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefundVisitor ) return ((RefundVisitor<? extends T>)visitor).visitDDay(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DDayContext dDay() throws RecognitionException {
		DDayContext _localctx = new DDayContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dDay);
		try {
			setState(66);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				match(T__3);
				setState(59);
				sign();
				setState(60);
				match(NUMBER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				match(T__3);
				setState(63);
				sign();
				setState(64);
				match(NUMBER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MeetingOrderContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(RefundParser.NUMBER, 0); }
		public MeetingOrderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_meetingOrder; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).enterMeetingOrder(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).exitMeetingOrder(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefundVisitor ) return ((RefundVisitor<? extends T>)visitor).visitMeetingOrder(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MeetingOrderContext meetingOrder() throws RecognitionException {
		MeetingOrderContext _localctx = new MeetingOrderContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_meetingOrder);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(T__4);
			setState(69);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RefundPriceContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(RefundParser.NUMBER, 0); }
		public RefundPriceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_refundPrice; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).enterRefundPrice(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).exitRefundPrice(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefundVisitor ) return ((RefundVisitor<? extends T>)visitor).visitRefundPrice(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RefundPriceContext refundPrice() throws RecognitionException {
		RefundPriceContext _localctx = new RefundPriceContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_refundPrice);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(NUMBER);
			setState(72);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(RefundParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(RefundParser.MINUS, 0); }
		public SignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).enterSign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RefundListener ) ((RefundListener)listener).exitSign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RefundVisitor ) return ((RefundVisitor<? extends T>)visitor).visitSign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SignContext sign() throws RecognitionException {
		SignContext _localctx = new SignContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_la = _input.LA(1);
			if ( !(_la==PLUS || _la==MINUS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 0:
			return expression_sempred((ExpressionContext)_localctx, predIndex);
		}
		return true;
	}
	private boolean expression_sempred(ExpressionContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0:
			return precpred(_ctx, 1);
		}
		return true;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}